[package]
name = "trace-save"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.24.0",features = ["bundled"]}
functions = {path="../libraries/functions"}