[package]
name = "functions"
version = "0.1.0"
authors = ["mkoakintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.24.0",features = ["bundled"]}
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
im = "15.0.0"
hyper = "0.13.5"
hyper-tls = "0.4.3"